--- a/04. Comma/TeamProjectMergeTest/TeampProject_SB/src/main/webapp/static/css/mypage.css
+++ b/04. Comma/TeamProjectMergeTest/TeampProject_SB/src/main/webapp/static/css/mypage.css
@@ -154,7 +154,7 @@
 /*-------------------------user_info_change_box-------------------------*/
 
 #mp_userinfo_change_btn img {
-    margin-top: 0.5rem;
+    margin-top: 0.2rem;
     width: 30px;
     height: 30px;
 }
@@ -171,12 +171,18 @@
 
 .mp_user_info_change_box p {
     margin-bottom: 20px;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
 }
 
 .mp_user_info_change_box input[type="text"] {
     margin-bottom: 1.3rem;
+    border-bottom: 2px solid black;
+    width: 20vw;
+}
+
+#mp_nickname {
+    color: #757575;
 }
 
 .mp_user_info_change_box select {
@@ -184,20 +190,9 @@
     margin-top: 2px;
 }
 
-/*.mp_user_info_change_box input[type='text'] {*/
-/*    border: none;*/
-/*    border-bottom: 2px solid black;*/
-/*}*/
-
-/*#address-list {*/
-/*    border: none;*/
-/*    border-bottom: 2px solid black;*/
-/*}*/
-
-/*#address-list option {*/
-/*    border: none;*/
-/*    border-bottom: 2px solid black;*/
-/*}*/
+#mp_change_address {
+    text-align: start;
+}
 
 .mp_btn{
     font-size: 16px;
@@ -207,30 +202,8 @@
     background-color: white;
 }
 
-.mp_btn select {
-    width: 100%;
-    margin-left: 0;
-}
-
 .mp_btn:hover{
     cursor: pointer;
-}
-
-.mp_btn::after{
-    display:block;
-    content: '';
-    padding: 2px;
-    border-bottom: solid 2px black;
-    transform: scaleX(0);
-    transition: transform 250ms ease-in-out;
-}
-
-.mp_btn:hover::after{
-    transform: scaleX(1);
-}
-.mp_btn.active::after{
-    transform: scaleX(1);
-    border-bottom: solid 2px orange;
 }
 
 /*-------------------------pick_board_box-------------------------*/
@@ -656,9 +629,9 @@
     right: 0;
 }
 
-#apply-message {
-    margin-top: 10px;
-}
+/*#apply-message {*/
+/*    margin-top: 5px;*/
+/*}*/
 
 /*-----------------mp_content_flexbox_right---------------------*/
 
