--- a/04. Comma/TeamProjectMergeTest/TeampProject_SB/src/main/webapp/static/css/location.css
+++ b/04. Comma/TeamProjectMergeTest/TeampProject_SB/src/main/webapp/static/css/location.css
@@ -1,341 +1,518 @@
-
-#main{
+/* 기본 화면 설정 */
+body {
+    overflow: hidden;
+}
+#main {
     width: 75vw;
     height: 95vh;
     margin: 2.5vh 2.5vw;
-    /*border: black 1px solid;*/
+    overflow: hidden;
 }
 
-
-#serchArea{
-    width: 75vw;
-    height: 4vh;
-    margin-bottom: 1vh;
+/* 검색창 영역 설정 */
+#serchArea {
     display: flex;
+    width: 100%;
+    height: 5vh;
+    padding: 1vh 2vh;
     align-items: center;
-    justify-content: center;
-    border-bottom: 1px solid black;
+    background: white;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    box-sizing: border-box;
 }
-
-
-#search-button{
-    width: 2vw;
-    height: 3vh;
-}
-
-#filter-button{
-    width: 2vw;
-    height: 3vh;
-}
-
-#filter-back-button{
-    width: 2vw;
-    height: 3vh;
-}
-
-#serchBar{
-    width: 71vw;
-    height: 3vh;
-    color: gray;
-    border:none;
-
-}
-
-#serch-form{
+#serch-form {
     display: flex;
 }
-
-
-
-
-
-#kakaoMap{
-    width: 45vw;
-    height: 85vh;
-    border: black 1px solid;
-    border-radius: 1vh;
+#search-button {
+    width: 3vh;
+    height: 3vh;
+    border: none;
+    background: none;
+    transition: transform 0.2s;
+    justify-content: center;
+    align-items: center;
+}
+#filter-button {
+    width: 3vh;
+    height: 3vh;
+    border: none;
+    background: none;
+    transition: transform 0.2s;
+    justify-content: center;
+    align-items: center;
+}
+#filter-back-button {
+    width: 3vh;
+    height: 3vh;
+    border: none;
+    background: none;
+    margin-right: 3vh;
+    transition: transform 0.2s;
+    justify-content: center;
+    align-items: center;
+}
+#search-button:hover,
+#filter-button:hover,
+#filter-back-button:hover {
+    transform: scale(1.2);
+}
+#serchBar {
+    width: 60vw;
+    height: 3vh;
+    border: none;
+    margin: 0 1vw;
+    font-size: 1.25em;
+    font-weight: bold;
+    outline: none;
 }
 
-#serchResultList{
+/* 지도 영역 설정 */
+#kakaoMap {
+    width: 35vw;
+    height: 85vh;
+    border: 1px solid rgba(129, 127, 127, 0.8);
+    box-shadow: 0 1px 6px rgba(129, 127, 127, 0.8);
+    border-radius: 10px;
+}
+
+/* 검색창 리스트 영역 설정(search result list) */
+#serchResultList {
     width: 45vw;
     height: 85vh;
-    overflow: auto;
+    overflow-y: auto;
     margin-left: 0.5vw;
-    -ms-overflow-style: none; /* 인터넷 익스플로러 */
-    scrollbar-width: none; /* 파이어폭스 */
-
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
-
 #serchResultList::-webkit-scrollbar {
     display: none;
 }
 
-
-/*serch result*/
-.serchResult{
-    width: 45vw;
-    height: 28.5vh;
+/* 검색 결과 (search result) */
+.serchResult {
+    width: 100%;
+    height: 15vh;
     margin-bottom: 1vh;
-    border: black 1px solid;
-    border-radius: 1vh;
+    border: 1px solid rgba(129, 127, 127, 0.8);
+    box-shadow: 0 1px 6px rgba(129, 127, 127, 0.8);
+    border-radius: 10px;
+    align-items: center;
     display: flex;
 }
-
-.serchResult:hover{
-    background-color: #D9D9D9;
+.serchResult:hover {
+    background-color: rgba(129, 127, 127, 0.2);
 }
-
-.serch-img{
+.serch-img {
     width: 15vw;
-    height: 25.5vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin: 1.5vh;
-}
-
-.serch-info{
-    width: 35vw;
     height: 100%;
-    padding: 3.5vh;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+.serch-info {
+    width: 100%;
+    height: 100%;
+    padding: 1.5vh;
     display: block;
 }
-
-.serch-name{
-    width: 30vw;
-    height: 40%;
-    font-size: 2.5vh;
-    font-weight: bold;
-
-}
-
-.serch-certification{
+.serch-name {
+    display: flex;
     width: 100%;
     height: 20%;
+    font-size: 1.1em;
+    font-weight: bold;
+    align-items: flex-start;
 }
-
-.serch-data{
+.serch-name p {
+    text-wrap: nowrap;
+}
+.serch-certification{
     width: 100%;
-    height: 40%;
+    height: 1em;
+    margin: 0.5vh 0;
+}
+.serch-data {
+    width: 100%;
+    height: 60%;
     display: flex;
-
+    flex-direction: column;
+}
+.price-info,
+.location-info,
+.direction-info {
+    display: flex;
+    width: 60%;
+    height: 15%;
+    text-wrap: nowrap;
+    font-size: 0.85em;
+    font-weight: bold;
+    margin-bottom: 1.5vh;
+    gap: 1vw;
 }
 
-/*filter Area*/
-
-#area-filer{
+/* 필터 영역 설정 (filter area) -- 지역 */
+#area-filer {
     display: flex;
+    margin: 2vh 0;
+    font-weight: bold;
+    font-size: 1.25em;
 }
-
 #areas .area{
     display: block;
     width: 4vw;
     height: 3vh;
 }
-
-#areas .area:hover{
+#areas .area:hover {
+    color: #FF6B00;
+}
+#areas .area.active {
     color: #FF6B00;
 }
 
-#areas .area.active{
-    color: #FF6B00;
+/* 필터 영역 설정 (filter price) -- 가격 */
+#price-filer {
+    font-size: 1.25em;
+    height: 7vh;
+    overflow: hidden;
 }
-
-/*filter price*/
-.price-progress {
-    height: 1rem;
-    width: 70vw;
-    background-color: #A9A8A8;
+#price-min, #price-max {
+    font-size: 0.8em;
+    font-weight: bold;
+    text-wrap: nowrap;
 }
-.price-progress .bar {
-    height: 1rem;
-    background-color: #FF6B00;
-}
-
-.price-progress .bar {
-    height: 1rem;
-    background-color: #FF6B00;
-}
-
-
-.price-progress-handle {
+#price-handle-min, #price-handle-max {
+    font-size: 0.8em;
+    font-weight: bold;
+    text-wrap: nowrap;
+    margin-top: 0.5em;
     display: block;
     position:absolute;
+}
+#price-handle-min {
+    margin-left: -2.5vw;
+}
+.price-progress {
+    height: 1em;
+    width: 60vw;
+    margin: 0 0.5vw;
+    border-radius: 5px;
+    background-color: #A9A8A8;
+    align-items: center;
+}
+.price-progress .bar {
+    height: 1em;
+    background-color: #FF6B00;
+    border-radius: 5px
+}
+.price-progress-handle {
+    display: block;
     z-index: 1;
     margin-top: -3px;
     margin-left: -10px;
-    width: 20px;
-    height: 20px;
-    border: 4px solid #FF6B00;
-    border-top-color: #FF6B00;
-    border-right-color: #FF6B00;
+    width: 1.25em;
+    height: 1.25em;
+    border: 10px solid #FF6B00;
     transform: rotate(45deg);
-    border-radius: 100%;
+    border-radius: 10px;
     background-color: #FF6B00;
     box-shadow: 0 1px 6px rgba(0, 0, 0, .2);
     cursor:pointer;
-}
-.price-handle-value{
-    display: block;
-    position:absolute;
-    top: 2vh;
-
 }
 
 .draggable {
     float: left; margin: 0 10px 10px 0;
 }
 
-
-
-
-
-/*modal*/
-#link_planArea{
-    border-bottom: 1px solid black;
+/* 모달창 영역 설정 (modal) */
+/* 모달창 헤더 영역 설정 (modal-header) */
+#link_planArea, #pick_button, #share_button {
+    width: 3vh;
+    height: 3vh;
+    margin-left: 1.5vh;
+    background: none;
+    border: none;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.2s;
+}
+#plan_button {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+#link_planArea:hover,
+#pick_button:hover,
+#share_button:hover {
+    transform: scale(1.2);
 }
 
-
-.result-container
-{
+/* 모달창 데이터 결과값 영역 (modal-container) */
+.result-container {
     display: flex;
     justify-content: center;
     align-items: center;
+    border: none;
 }
 
-
-#resultModalImg{
+/* 모달창 이미지 영역 설정 */
+#resultModalImg {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 35vh;
-    width: 18vw;
-
+    border-radius: 10px;
+    width: 100%;
+    height: 40vh;
 }
 
-#resultModalMap{
-    height: 35vh;
-    width: 38vw;
-    border-radius: 1vh;
+/* 모달창 지도 영역 설정 */
+#resultModalMap {
+    width: 100%;
+    height: 40vh;
+    border-radius: 10px;
 }
 
-/*modal comment*/
-#resultModalComment{
-    border: 2px solid #D7D6D6;
-    border-radius: 1vh;
-    width: 19vw;
-    height: 35vh;
-    padding: 2vh;
-    overflow: auto;
+/* 모달창 댓글 목록 영역 설정 (modal comment) */
+#resultModalComment {
+    border: 1px solid rgba(129, 127, 127, 0.5);
+    border-radius: 10px;
+    width: 100%;
+    height: 40vh;
+    overflow-y: auto;
+    justify-content: center;
+    font-size: 1.25em;
+    font-weight: bold;
+    text-align: center;
+    align-items: center;
+    scrollbar-width: none;
 }
-
-.commentArea{
-
-    border-top: 1px solid #D7D6D6;
-    border-bottom: 1px solid #D7D6D6;
-    padding:  0.5vh 0.5wh;
+#resultModalComment::-webkit-scrollbar {
+    display: none;
 }
-
-
-
-.price-info,
-.location-info,
-.direction-info{
-
-}
-
-
-
-
-/*boook*/
-.form-select{
-    border: 0px;
-    width: 10vw;
-
-}
-
-
-
-/*carousel*/
-.carousel{
-    max-width: 17vw;
-
-}
-.carousel .carousel-item{
-    height: 25vh;
-}
-.carousel-item img {
-    position: absolute;
-    object-fit:cover;
+#review-list {;
+    position: sticky;
+    background: white;
+    border-bottom: 1px solid rgba(129, 127, 127, 0.5);
     top: 0;
-    left: 0;
-
+    width: 100%;
+    height: 3em;
+    padding: 0.875em;
+    z-index: 1;
+    margin: 0;
+}
+.commentArea{
+    border-bottom: 1px solid rgba(129, 127, 127, 0.5);
+    padding: 1.5vh;
+}
+.place_name, .option_name {
+    align-items: center;
+    justify-content: center;
+    font-size: 0.75em;
+    font-weight: bold;
+    margin-left: 0.3vw;
+    text-wrap: nowrap;
+}
+.comment {
+    padding: 0.3vh;
+    text-align: left;
+    font-size: 0.7em;
+    font-weight: normal;
 }
 
+/* 모달창 장소 정보 영역 설정 (resultModalDatas) */
+#resultModalDatas {
+    padding: 2vh;
+}
+#resultModalDatas #place_name {
+    font-size: 1.1em;
+    font-weight: bold;
+    margin-right: 1em;
+    text-wrap: nowrap;
+}
+#resultModalDatas #grade {
+    font-size: 1em;
+    font-weight: bold;
+    text-wrap: nowrap;
+}
+#resultModalDatas .price-info,
+#resultModalDatas .location-info,
+#resultModalDatas .direction-info {
+    width: 100%;
+    margin: 0;
+    display: flex;
+    text-wrap: nowrap;
+    font-size: 1.1em;
+    font-weight: bold;
+}
+#resultModalDatas .price,
+#resultModalDatas .direction,
+#resultModalDatas .location {
+    font-size: 0.8em;
+    font-weight: normal;
+}
 
+/* 모달창 예약 영역 설정 (book) */
+#resultModalBooking {
+    padding: 2vh;
+}
+#book-men {
+    font-size: 1em;
+    font-weight: bold;
+    text-wrap: nowrap;
+    color: black;
+    justify-content: space-between;
+}
+#bookMen-dropDown {
+    font-size: 1em;
+    font-weight: bold;
+    text-wrap: nowrap;
+    color: black;
+    outline: none;
+}
+.form-select {
+    width: 10vw;
+}
+.dropdown-menu,
+.form-group,
+#book-option-button {
+    font-size: 1em;
+    font-weight: bold;
+    color: black;
+}
+.form-control {
+    font-size: 1em;
+    font-weight: bold;
+    border: none;
+}
+.form-control:focus {
+    outline: none;
+    box-shadow: none;
+}
+.form-control::placeholder {
+    font-weight: bold;
+    font-size: 1em;
+    color: #A9A8A8;
+}
+#book-option {
+    font-size: 1em;
+    font-weight: bold;
+    text-wrap: nowrap;
+    color: black;
+    justify-content: space-between;
+}
+.book-opiton-item {
+    font-size: 1em;
+    font-weight: bold;
+    color: black;
+}
+.book-opiton-item:hover {
+    background-color: rgba(129, 127, 127, 0.2);
+}
+#book-button {
+    margin-left: 77%;
+    background: none;
+    border: none;
+    border-radius: 5px;
+    color: black;
+    font-size: 1em;
+    font-weight: bold;
+    width: 5em;
+    height: 2em;
+    transition: background-color 0.2s;
+}
+#book-button:hover {
+    background-color: #ff6b00;
+    color: white;
+}
 
-
-/*Calender*/
-#calendar-wrapper {
-    width: 38vw;
-    height: 35vh;
-    margin: 0 auto;
+/* 모달창 사진 슬라이드 영역 설정 (carousel) */
+.carousel .carousel-item {
+    width: 18vw;
+    height: 25vh;
+    border-radius: 10px;
     justify-content: center;
     align-items: center;
 }
-
-.calendar{
-    width: 16vw;
-    height: 32vh;
-    margin: 1.5vh 1.5vw;
+.carousel-item img {
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    object-fit:cover;
 }
 
-.calendar-button{
-    width: 2vh;
-    height: 2vh;
+/* 모달창 달력 영역 설정 (Calender) */
+#resultModalCalender {
+    padding: 2vh;
 }
-
-#calendar-header h2 {
-    font-size: 24px;
+#calendar-wrapper {
+    padding: 0;
+    width: 100%;
+    height: 95%;
+    justify-content: center;
+    align-items: center;
 }
-
-.calendar-days{
-    display: flex;
+.calendar {
+    width: 47%;
+    height: 97%;
+    margin: 1.5%;
 }
-
-.calendar-days .day-name {
-    width:  2vw;
-    text-align: center;
+.calendar-button {
+    width: 3vh;
+    height: 3vh;
+    font-size: 1.25em;
+    font-weight: bold;
+    color: black;
+    outline: none;
+    box-shadow: none;
+}
+.calendar-button:hover {
+    color: #ff600b;
+    outline: none;
+    box-shadow: none;
+}
+.calendar-button:focus,
+.btn:focus {
+    outline: none !important;
+    box-shadow: none !important;
+}
+.month-year {
+    font-size: 2em;
     font-weight: bold;
 }
-
+.calendar-days{
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    font-size: 1.1em;
+    text-align: center;
+    font-weight: bold;
+    margin-top: 1.3em;
+}
 .calendar-body {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
 }
-
 .day {
-
     width: 2vw;
     height: 4vh;
     text-align: center;
-    font-size: 2vh;
+    align-items: center;
+    font-size: 1em;
+    font-weight: bold;
     transition: background-color 0.2s;
+    border-radius: 5px;
 }
-
 .day:hover {
-    background-color: #f0f0f0;
+    background-color: rgba(129, 127, 127, 0.5);
 }
-
 .day.booked {
-    background-color: #FF6B00 ;
+    color: white;
+    background-color: #FF6B00;
+    border: 1px solid white;
 }
-
 .day.booked:hover {
-    background-color: #FF6B00 ;
+    color: white;
+    background-color: #FF6B00;
+    border: 1px solid white;
 }
-
-
-
-
-
