--- a/04. Comma/TeamProjectMergeTest/TeampProject_SB/src/main/webapp/static/css/location.css
+++ b/04. Comma/TeamProjectMergeTest/TeampProject_SB/src/main/webapp/static/css/location.css
@@ -37,6 +37,7 @@ body {
 #filter-button {
     width: 3vh;
     height: 3vh;
+    margin-left: 9vw;
     border: none;
     background: none;
     transition: transform 0.2s;
@@ -210,13 +211,13 @@ body {
 .price-progress-handle {
     display: block;
     z-index: 1;
-    margin-top: -3px;
+    margin-top: -0.5em;
     margin-left: -10px;
-    width: 1.25em;
-    height: 1.25em;
+    width: 2em;
+    height: 2em;
     border: 10px solid #FF6B00;
     transform: rotate(45deg);
-    border-radius: 10px;
+    border-radius: 50%;
     background-color: #FF6B00;
     box-shadow: 0 1px 6px rgba(0, 0, 0, .2);
     cursor:pointer;
@@ -464,18 +465,21 @@ body {
     font-size: 1.25em;
     font-weight: bold;
     color: black;
-    outline: none;
-    box-shadow: none;
+    outline: none !important;
+    box-shadow: none !important;
+    border: none !important;
 }
 .calendar-button:hover {
     color: #ff600b;
-    outline: none;
-    box-shadow: none;
+    outline: none !important;
+    box-shadow: none !important;
+    border: none !important;
 }
 .calendar-button:focus,
 .btn:focus {
     outline: none !important;
     box-shadow: none !important;
+    border: none !important;
 }
 .month-year {
     font-size: 2em;
