--- a/04. Comma/TeamProjectMergeTest/TeampProject_SB/src/main/webapp/static/css/mypage.css
+++ b/04. Comma/TeamProjectMergeTest/TeampProject_SB/src/main/webapp/static/css/mypage.css
@@ -238,11 +238,8 @@
     padding-bottom: 0.4rem;
     padding-right: 0.4rem;
     cursor: pointer;
-}
-
-#mp_heart_icon:hover ~ #mp_pickboard_text {
-    transform: scale(1.3);
-    transition: transform 0.3s ease;
+    user-select: none;
+    pointer-events: none;
 }
 
 #mp_pickboard_text {
@@ -263,10 +260,21 @@
     padding-bottom: 0.5rem;
     padding-right: 0.4rem;
     cursor: pointer;
+    user-select: none;
+    pointer-events: none;
 }
 
-#mp_pin_icon:hover ~ #mp_pickplace_text {
-    transform: scale(1.3);
+#mp_pickplace_text {
+    font-size: 15px;
+    font-weight: bold;
+    transition: font-size 0.3s, color 0.3s;
+}
+
+#mp_pickplace_text:hover {
+    font-size: 1.3em;
+    font-weight: bolder;
+    color: #ff6b00;
+    border-color: #ff6b00;
 }
 
 /* Overlay */
@@ -509,7 +517,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 80%;
-    max-width: 600px;
+    max-width: 700px;
     background: white;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -588,6 +596,8 @@
 
 #mp_status_message_upload_btn {
     background: transparent;
+    border: none;
+    margin-top: 1em;
 
 }
 
